# lexgen

./: LICENCE.md  README.md
example/: CMakeLists.txt  tokenizer.cpp
include/: pvm.lexgen.base.h  pvm.lexgen.context.h  pvm.lexgen.h  pvm.lexgen.op_alternation.h  pvm.lexgen.op_one_or_n.h  pvm.lexgen.op_sequence.h  pvm.lexgen.op_zero_or_n.h  pvm.lexgen.op_zero_or_one.h  pvm.lexgen.scan.h  pvm.lexgen.scan.text.h
